# client-python

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.circleci/: config.yml
docs/: conf.py  (+2 more)
libs/xtm-oaev-sdk/: README.md  pyproject.toml
libs/xtm-oaev-sdk/docs/: api-overview.md  configuration.md  daemon-protocol.md  migration-guide.md  usage-examples.md
libs/xtm-oaev-sdk/tests/: test_configuration.py  test_contracts.py  test_daemon_protocol.py  test_phase_a_trivial.py  test_phase_b_protocol.py  test_phase_c_entanglement.py  test_phase_c_ssl.py  test_utils.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/: __init__.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/_core/: __init__.py  asset_types.py  client_protocol.py  daemon_protocol.py  errors.py  ssl_utils.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/_core/configuration/: __init__.py  configuration.py  connector_config_schema_generator.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/_core/contracts/: contract_builder.py  contract_config.py  variable_helper.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/_core/signatures/: __init__.py  models.py  signature_manager.py  signature_match.py  signature_type.py  types.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/contracts/: __init__.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/contracts/configuration/: __init__.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/contracts/contracts/: __init__.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/engine/: __init__.py  errors.py  utils.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/engine/configuration/: __init__.py  configuration.py  settings_loader.py  sources.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/engine/contracts/: __init__.py  contract_builder.py  contract_config.py  contract_utils.py  variable_helper.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/engine/security_domain/: __init__.py  types.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/engine/signatures/: __init__.py  models.py  signature_manager.py  signature_match.py  signature_type.py
libs/xtm-oaev-sdk/xtm_oaev_sdk/public/: __init__.py
libs/xtm-second-oaev-sdk/: README.md  pyproject.toml
libs/xtm-second-oaev-sdk/docs/: api-overview.md  configuration.md
libs/xtm-second-oaev-sdk/tests/: test_configuration.py  test_contracts.py  test_daemon_protocol.py  test_phase_b_protocol.py  test_phase_c_entanglement.py  test_phase_c_ssl.py  test_utils.py
libs/xtm-second-oaev-sdk/xtm_second_oaev_sdk/: __init__.py
libs/xtm-second-oaev-sdk/xtm_second_oaev_sdk/_core/: __init__.py
libs/xtm-second-oaev-sdk/xtm_second_oaev_sdk/public/: __init__.py
(+125 files in other folders)
