[project]
name = "xtm-oaev-sdk"
version = "0.1.0"
description = "OpenAEV SDK core: configuration, contracts, signatures, and shared utilities."
authors = [
    {name = "Filigran", email = "contact@filigran.io"}
]
maintainers = [
    {name = "Filigran", email = "contact@filigran.io"}
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pydantic (>=2.13.3,<2.14.0)",
    "pydantic-settings (>=2.14.0,<2.15.0)",
    "PyYAML (>=6.0,<6.1)",
    "python_json_logger (>=3.3.0,<3.4.0)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
