[project]
name = "xtm-second-oaev-sdk"
version = "0.1.0"
description = "OpenAEV SDK core (DDD + Light Hex Architecture): configuration, contracts, signatures, and shared utilities."
authors = [
    {name = "Filigran", email = "contact@filigran.io"}
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pydantic (>=2.13.3,<2.14.0)",
    "pydantic-settings (>=2.14.0,<2.15.0)",
    "PyYAML (>=6.0,<6.1)",
    "python_json_logger (>=3.3.0,<3.4.0)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
